# LianBot

./: .gitignore  Cargo.toml  check_features.sh  config.example.toml  deploy.sh  install.sh  logic.example.toml  plugins.example.toml  runtime.example.toml  setup.sh
clients/stalk_hypr/: Cargo.toml
clients/stalk_hypr/src/: main.rs
scripts/: build.sh  deploy.sh  gen_config.sh  gen_logic.sh  gen_runtime.sh  lib.sh  logs.sh  service.sh  status.sh
src/: config.rs  error.rs  main.rs
src/api/: client.rs
src/command/: context.rs  mod.rs  registry.rs
src/command/commands/: alive.rs  help.rs  img.rs  mod.rs  ping.rs  smy.rs  stalk.rs
src/commands/: acg.rs  admin.rs  alive.rs  dress.rs  fwdtest.rs  help.rs  img.rs  mod.rs  msg.rs  ping.rs  send.rs  sign.rs  smy.rs  stalk.rs  world.rs
src/commands/core/: context.rs  mod.rs  params.rs  traits.rs
src/core/: api.rs  config.rs  dispatcher.rs  error.rs  logger.rs  mod.rs  parser.rs  plugin_config.rs  registry.rs
src/core/pool/: cache.rs  mod.rs  store.rs
src/core/typ/: message.rs  mod.rs
src/core/ws/: manager.rs
src/handler/: dispatcher.rs  mod.rs
src/kernel/: app.rs  boot.rs  config.rs  error.rs  mod.rs
src/logic/: config.rs  mod.rs
src/logic/chat/: mod.rs  splitter.rs  tools.rs
src/logic/github/: mod.rs
src/logic/smy/: fetcher.rs  llm.rs  mod.rs  renderer.rs  screenshot.rs  statistics.rs
src/logic/smy/fetcher/: format.rs  mod.rs  model.rs  pager.rs  parser.rs
src/logic/yiban/: mod.rs
src/parser/: command_parser.rs  mod.rs
src/permission/: mod.rs  model.rs  store.rs
src/plugins/: mod.rs
src/plugins/smy/: fetcher.rs  llm.rs  mod.rs  renderer.rs  screenshot.rs  statistics.rs
src/runtime/: api.rs  config.rs  dispatcher.rs  logger.rs  mod.rs  parser.rs  plugin_config.rs  registry.rs  time.rs
src/runtime/api/: forward.rs  history.rs  image.rs  mod.rs  send_msg.rs
src/runtime/db/: mod.rs  sqlite.rs
src/runtime/dispatcher/: help.rs  mod.rs  validation.rs
src/runtime/http/: mod.rs
src/runtime/llm/: client.rs  gemini.rs  mod.rs
src/runtime/permission/: access.rs  mod.rs  model.rs  store.rs
src/runtime/pool/: cache.rs  mod.rs  model.rs  seed.rs  store.rs  traits.rs
src/runtime/typ/: event.rs  message.rs
src/runtime/webhook/: mod.rs  types.rs  verify.rs
src/runtime/ws/: manager.rs
src/services/: github.rs  mod.rs  scheduler.rs  yiban.rs
src/smy/: fetcher.rs  llm.rs  mod.rs  renderer.rs  screenshot.rs  statistics.rs
src/typ/: event.rs  message.rs  mod.rs
src/ws/: manager.rs  mod.rs
tools/: bench_history.py  image_probe.py  napcat_probe.py  probe_history.py  test_gemini.py
tools/smy_bench/: Cargo.toml  main.rs
