[package]
name = "LianBot"
version = "0.2.0"
edition = "2024"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 配置 / 环境变量
dotenvy = "0.15"

# 错误处理
thiserror = "2"
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = { version = "0.2", optional = true }
time = { version = "0.3", features = ["macros"] }

# 工具
async-trait = "0.1"
once_cell   = "1"
futures     = "0.3"

# 加密 / 签名（GitHub Webhook HMAC-SHA256 验签，可选）
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hex  = { version = "0.4",  optional = true }
chrono      = { version = "0.4", features = ["serde"], optional = true }
base64      = { version = "0.22", optional = true }
tempfile    = { version = "3", optional = true }

# 持久化（可选，通过 feature 控制）
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[features]
# 默认启用全部命令
default = [
    "cmd-ping", "cmd-help", "cmd-alive",
    "cmd-smy", "cmd-acg", "cmd-stalk",
    "cmd-world",
    "core-db",
    "svc-github",
]

# ── 各命令独立 feature ──────────────────────────────────────────────────────
cmd-ping  = []
cmd-help  = []
cmd-alive = []
cmd-acg   = []
cmd-stalk = ["core-ws"]                   # stalk 依赖 /wstalk WebSocket 路由
cmd-smy   = ["dep:chrono", "dep:base64", "dep:tempfile"]  # 截图(base64) + 时间处理(chrono) + 截图临时目录(tempfile)
cmd-world = []                            # /world 60秒看世界

# ── 服务 feature ────────────────────────────────────────────────────────────
svc-github = ["dep:hmac", "dep:sha2", "dep:hex"]  # GitHub Webhook 验签 + 通知

# ── 基础设施 feature ────────────────────────────────────────────────────────
core-ws          = []                     # 暴露 GET /wstalk WebSocket 路由
core-db          = ["dep:rusqlite"]        # 通用 SQLite 句柄（DB 层基础设施）
core-log-file    = ["dep:tracing-appender"] # 每日滚动日志文件（需配置 log_dir）

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level      = 2
codegen-units  = 4
lto            = false
