[package]
name = "LianBot"
version = "0.2.0"
edition = "2024"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 配置 / 环境变量
dotenvy = "0.15"

# 错误处理
thiserror = "2"
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = { version = "0.2", optional = true }
time = { version = "0.3", features = ["macros"] }

# 工具
async-trait = "0.1"
once_cell   = "1"
futures     = "0.3"
rand        = { version = "0.8", optional = true }
regex       = { version = "1", optional = true }
urlencoding = { version = "2", optional = true }

# 加密 / 签名（GitHub Webhook HMAC-SHA256 验签，可选）
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hex  = { version = "0.4",  optional = true }
chrono      = { version = "0.4", features = ["serde"] }
base64      = { version = "0.22", optional = true }
tempfile    = { version = "3", optional = true }

# 持久化（可选，通过 feature 控制）
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[features]
# TODO: default feature 和 feature 分组需要未来审计和优化
# 默认启用基础功能（临时方案）
default = [
    # Runtime 基础设施
    "runtime-api", "runtime-typ", "runtime-dispatcher",
    "runtime-parser", "runtime-registry", "runtime-permission",
    "runtime-pool", "runtime-logger", "runtime-time",

    # 基础命令
    "cmd-ping", "cmd-help", "cmd-alive",
]

# ── Runtime 层 features ─────────────────────────────────────────────────────

# Runtime 第 1 层：基础设施
runtime-config     = []                                    # 配置加载（按需依赖）
runtime-time       = ["runtime-config"]                    # 时间工具
runtime-typ        = []                                    # OneBot 协议类型定义
runtime-logger     = ["runtime-time"]                      # 日志系统

# Runtime 第 2 层：核心模块
runtime-api        = ["runtime-config"]                    # HTTP 客户端
runtime-llm        = ["runtime-config"]                    # LLM 客户端
runtime-ws         = []                                    # WebSocket 管理

# Runtime 第 3 层：高级功能
runtime-parser     = []                                    # 命令解析
runtime-registry   = []                                    # 命令注册表
runtime-permission = []                                    # 权限控制（可选依赖 core-db）
runtime-pool       = ["runtime-typ", "runtime-time", "runtime-config"]  # 消息池
runtime-dispatcher = [
    "runtime-parser",
    "runtime-registry",
    "runtime-permission",
    "runtime-api",
    "runtime-typ",
]  # 命令分发

# ── Logic 层 features ───────────────────────────────────────────────────────
logic-smy    = ["runtime-api", "runtime-typ"]              # 日报生成（可选 pool/llm）
logic-chat   = [
    "runtime-api", "runtime-typ", "runtime-pool",
    "runtime-llm", "runtime-permission"
]  # AI 对话
logic-yiban  = ["runtime-api", "runtime-typ", "core-webhook"]  # 易班签到
logic-github = ["runtime-api", "runtime-typ", "core-webhook"]  # GitHub 通知

# ── Commands 层 features ────────────────────────────────────────────────────
cmd-ping   = ["runtime-dispatcher"]
cmd-help   = ["runtime-dispatcher"]
cmd-alive  = ["runtime-dispatcher"]
cmd-acg    = ["runtime-dispatcher"]
cmd-world  = ["runtime-dispatcher"]
cmd-stalk  = ["runtime-dispatcher", "runtime-ws", "core-ws"]
cmd-smy    = ["runtime-dispatcher", "logic-smy", "dep:base64", "dep:tempfile"]
cmd-dress  = ["runtime-dispatcher", "dep:rand", "dep:regex", "dep:urlencoding", "dep:base64"]
cmd-sign   = ["runtime-dispatcher", "logic-yiban"]

# ── Services 层 features ────────────────────────────────────────────────────
svc-github = ["logic-github"]              # GitHub Webhook 通知
svc-yiban  = ["logic-yiban"]               # 易班签到 Webhook 通知

# ── 基础设施 features ───────────────────────────────────────────────────────
core-webhook     = ["dep:hmac", "dep:sha2", "dep:hex"]  # HMAC-SHA256 统一验签
core-ws          = ["runtime-ws"]         # 暴露 GET /wstalk WebSocket 路由（依赖 WsManager）
core-db          = ["dep:rusqlite"]        # 通用 SQLite 句柄（DB 层基础设施）
core-log-file    = ["dep:tracing-appender"] # 每日滚动日志文件（需配置 log_dir）

# ── Feature 分组（便捷组合）─────────────────────────────────────────────────
# TODO: 未来需要审计和优化这些分组
full     = [
    "default", "runtime-llm", "runtime-ws", "core-db",
    "cmd-smy", "cmd-acg", "cmd-stalk", "cmd-world", "cmd-dress", "cmd-sign",
    "svc-github", "svc-yiban"
]
minimal  = []  # 仅 kernel 层
business = ["runtime-dispatcher", "runtime-pool", "runtime-llm", "cmd-smy", "cmd-stalk", "logic-smy", "logic-chat"]
admin    = ["runtime-dispatcher", "cmd-alive", "core-db"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level      = 2
codegen-units  = 4
lto            = false
