[package]
name = "smy-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "smy-bench"
path = "main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
chrono = "0.4"
base64 = "0.22"
tempfile = "3"
